[tool.poetry]
name = "fs-honeypot"
version = "0.1.0"
description = "FS-Honeypot is a security tool that monitors specified files for unauthorized access attempts. When a honeypot file is accessed, the tool disables the network interface, logs the incident, and sends a notification alert. This script is designed to run on both Windows and Unix-like systems, ensuring robust protection against unauthorized access."
authors = ["Aareon Sullivan <askully13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
loguru = "^0.7.2"
watchdog = "^4.0.1"
ntfy = { git = "https://github.com/dschep/ntfy.git", branch = "master" }

[tool.poetry.extras]
windows = ["pylnk3"]

[tool.poetry.scripts]
fs-honeypot = "fs_honeypot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
